--- a/product edit page.html
+++ b/product edit page.html
@@ -18,7 +18,7 @@
 </nav>
     <h2>womens wear</h2>
      <div class="row1">
-     <img src="/images/bubble short dresses.jpg"  width="100" height="100" alt="bubble short dress">
+     <img src="https://raw.githubusercontent.com/Rahabwangechi/admin-pages/main/images/bubble%20short%20dresses.jpg"  width="100" height="100" alt="bubble short dress">
      <ul>
         <li>product id_ 2345 </li>
         <li>bubble short dress</li>
@@ -31,7 +31,7 @@
 </div>
 <hr>
 <div class="row2">
-    <img src="photos/denim skirt.jpg" width="100" height="100" alt="denim skirt">
+    <img src="https://raw.githubusercontent.com/Rahabwangechi/admin-pages/main/photos/denim%20skirt.jpg" width="100" height="100" alt="denim skirt">
     <ul>
         <li>product id_ 4568</li>
         <li>denim skirt</li>
@@ -45,7 +45,7 @@
 </div><hr>
 <h3>MEN'S WEAR</h3>
 <div class="row3">
-    <img src="photos/long sleeved shirt.jpg" width="100" height="100" alt="long sleeved shirt">
+    <img src="https://raw.githubusercontent.com/Rahabwangechi/admin-pages/main/photos/long%20sleeved%20shirt.jpg" width="100" height="100" alt="long sleeved shirt">
   <ul>
       <li>product id_5667</li>
       <li>long sleeved shirt</li>
@@ -57,7 +57,7 @@
   </ul>
 </div><hr>
 <div class="row4">
-    <img src="photos/jeans.jpg" width="100" height="100" alt="men's jeans">
+    <img src="https://raw.githubusercontent.com/Rahabwangechi/admin-pages/main/photos/jeans.jpg" width="100" height="100" alt="men's jeans">
     <ul>
         <li>product id_4556</li>
         <li>Men's Jeans</li>
@@ -71,7 +71,7 @@
 </div><hr>
 <h4>ACCESSORIES</h4>
 <div class="row5">
-    <img src="photos/mens watches.jpg" width="100" height="100" alt="Men's watches">
+    <img src="https://raw.githubusercontent.com/Rahabwangechi/admin-pages/main/photos/mens%20watches.jpg" width="100" height="100" alt="Men's watches">
     <ul>
         <li>Product id_6778</li>
         <li>Men's Watches</li>
@@ -83,7 +83,7 @@
     </ul>
 </div><hr>
 <div class="row6">
-    <img src="photos/ladies handbags.jpg" width="100" height="100" alt="ladies handbags">
+    <img src="https://raw.githubusercontent.com/Rahabwangechi/admin-pages/main/photos/ladies%20handbags.jpg" width="100" height="100" alt="ladies handbags">
     <ul>
         <li>Product id_8877</li>
         <li>Ladies Handbags</li>
